Fix occasional occurence of horizontal scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,7 @@
 
 body {
 	font-family: Arial, Helvetica, Sans-serif;
+	overflow-x: hidden;
 }
 
 img {
